# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1287 2013/06/09 01:39:45 zmedico Exp $

*portage-2.2.0_alpha179 (09 Jun 2013)

  09 Jun 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha179.ebuild:
  2.2.0_alpha179 version bump. This includes all of the fixes in 2.1.12.4. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.12.4 (09 Jun 2013)

  09 Jun 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.12.4.ebuild:
  2.1.12.4 version bump. This fixes bug #467826 (handle revision part for =*
  atoms). Bug #472632 tracks all bugs fixed since portage-2.1.12.2.

*portage-2.2.0_alpha178 (08 Jun 2013)

  08 Jun 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha178.ebuild:
  2.2.0_alpha178 version bump. This includes all of the fixes in 2.1.12.3.
  Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.12.3 (08 Jun 2013)

  08 Jun 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.12.3.ebuild:
  2.1.12.3 version bump. This fixes bug #471184 (repoman deprecation warning for
  mono.eclass) and bug #471910 (fix emerge --buildpkgonly to fail before --ask
  prompt). Bug #472632 tracks all bugs fixed since portage-2.1.12.2.

  07 Jun 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.55.ebuild,
  -portage-2.1.12.1.ebuild, -portage-2.2.0_alpha173.ebuild,
  -portage-2.2.0_alpha176.ebuild:
  Remove old versions.

  07 Jun 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.12.2.ebuild:
  Stable for x86, wrt bug #472540

  07 Jun 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.12.2.ebuild:
  Stable for sparc, wrt bug #472540

  07 Jun 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.12.2.ebuild:
  Stable for sh, wrt bug #472540

  07 Jun 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.12.2.ebuild:
  Stable for s390, wrt bug #472540
