@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1287 2013/06/09 01:39:45 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1288 2013/06/15 01:47:26 zmedico Exp $
+
+  15 Jun 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.12.3.ebuild,
+  -portage-2.2.0_alpha178.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha179 (09 Jun 2013)
 
